Corrected some spellings in text, diminished  border project images, and projects animations shift to left

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -486,8 +486,8 @@ ul li{
 
 .screen{
    width: 280px;
-   height: 200px;
-   border: solid 10px rgb(70, 70, 70);
+   height: 170px;
+   border: solid 6px rgb(70, 70, 70);
    margin: 2rem auto auto;
    border-radius: 5px;
 }
@@ -495,7 +495,7 @@ ul li{
 .screen-base{
     border-radius: 5px;
     width: 270px;
-    height: 10px;
+    height: 8px;
     background-color: rgb(70, 70, 70);
     margin: 0.5rem auto;
 }
@@ -978,7 +978,7 @@ textarea{
 .screen{
     width: 350px;
     height: 240px;
-    border: solid 10px rgb(70, 70, 70);
+    border: solid 8px rgb(70, 70, 70);
     margin: 2rem auto auto;
  }
 
@@ -1445,7 +1445,7 @@ min-height: 100vh;
 .screen{
     width: 390px;
     height: 250px;
-    border: solid 10px rgb(70, 70, 70);
+    border: solid 8px rgb(70, 70, 70);
     margin: 2rem auto auto;
     border-radius: 5px;
  }
